2009-09-21  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (with_dynamic_modules): load the modules files
	with an explicit .fas extension, both to override .lisp inherited
	from *load-truename* and to ensure that the module is compiled
	Reported by Barry Fishman <barry_fishman@acm.org>

2009-09-20  Sam Steingold  <sds@gnu.org>

	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h:
	* modules/regexp/glm4/stdlib_h.m4, modules/regexp/glm4/unistd_h.m4:
	* modules/syscalls/gllib/unistd.in.h, modules/syscalls/glm4/unistd_h.m4:
	* gllib/unistd.in.h, glm4/unistd_h.m4: update from gnulib
	* modules/regexp/gllib/Makefile.am, modules/syscalls/gllib/Makefile.am:
	* gllib/Makefile.am: regenerate

2009-09-20  Sam Steingold  <sds@gnu.org>

	* glm4/absolute-header.m4, glm4/btowc.m4, glm4/malloc.m4:
	* glm4/regex.m4, glm4/ssize_t.m4, glm4/stdlib_h.m4,
	* glm4/wcrtomb.m4: remove obsolete files (now in modules/regexp/glm4)
	* glm4/fnmatch.m4: remove obsolete file (now in modules/wildcard/glm4)

2009-09-20  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): remove backups in glm4 too

2009-09-18  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): fix cl_cv_have_clisp caching;
	accept an optional second argument to specify whether the features
	and clisp itself are required or not (default=true)

2009-09-17  Sam Steingold  <sds@gnu.org>

	Update gnulib imports (mostly for mktime fixes for NetBSD/i386)
	* modules/regexp/gllib/stddef.in.h, modules/regexp/glm4/stddef_h.m4:
	* modules/regexp/glm4/wchar_t.m4, modules/syscalls/gllib/stddef.in.h:
	* modules/syscalls/glm4/stddef_h.m4, modules/syscalls/glm4/wchar_t.m4:
	* gllib/stddef.in.h, glm4/stddef_h.m4: add
	* modules/regexp/gllib/Makefile.am, modules/regexp/gllib/stdlib.in.h:
	* modules/regexp/gllib/unistd.in.h, modules/regexp/glm4/gnulib-comp.m4:
	* modules/regexp/glm4/stdlib_h.m4, modules/regexp/glm4/unistd_h.m4:
	* modules/syscalls/gllib/Makefile.am, modules/syscalls/gllib/mktime.c: